--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.koushikdutta.ion:ion:2.2.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
